fixes next shifts

--- a/Muddi.ShiftPlanner.Client/Components/DisplayNextShiftsComponent.razor.css
+++ b/Muddi.ShiftPlanner.Client/Components/DisplayNextShiftsComponent.razor.css
@@ -1,5 +1,4 @@
 .shift-container {
-    max-height: 300px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
